k8s/whitewhale-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whitewhale
  namespace: whitewhale
  labels:
    app: whitewhale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whitewhale
  template:
    metadata:
      labels:
        app: whitewhale
    spec:
      containers:
        - name: whitewhale
          image: registry.digitalocean.com/whitewhale/whitewhale
          ports:
          - containerPort: 8001
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "250m"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: whitewhale
